--- a/LITReview/main/templates/main/new-review.html
+++ b/LITReview/main/templates/main/new-review.html
@@ -5,22 +5,9 @@
         Nouvelle critique
     </h2>
 
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
-        <p>
-            <label for="headline">Titre</label>
-            <input type="text" id="headline" name="headline"/>
-        </p>
-        <p>
-            <label for="body">Critique</label>
-            <input type="text" id="body" name="body"/>
-        </p>
-        <p>
-            <label for="rating">Notation</label>
-            <input type="text" id="rating" name="rating"/>
-        </p>
-        <p>
-            <input type="submit" value="Publier la Critique"/>
-        </p>
+        {{ form.as_p }}
+        <input type="submit" value="Publier la critique"/>
     </form>
 {% endblock %}
