--- a/LITReview/main/templates/main/edit-ticket.html
+++ b/LITReview/main/templates/main/edit-ticket.html
@@ -7,17 +7,8 @@
 
     <form method="post">
         {% csrf_token %}
-        <p>
-            <label for="title">Titre</label>
-            <input type="text" id="title" name="title" placeholder="{{ result.title }}"/>
-        </p>
-        <p>
-            <label for="description">Description</label>
-            <input type="text" id="description" name="description"/>
-        </p>
-        <p>
-            <input type="submit" value="Enregistrer les modifications"/>
-        </p>
+        {{ form.as_p }}
+        <input type="submit" value="Enregistrer les modifications"/>
     </form>
     <p>
         <a href="{% url 'contributions' %}">
