--- a/LITReview/main/templates/main/edit-ticket.html
+++ b/LITReview/main/templates/main/edit-ticket.html
@@ -10,6 +10,13 @@
         {{ form.as_p }}
         <input type="submit" value="Enregistrer les modifications"/>
     </form>
+
+    <p>
+        <a href="{% url 'contributions' %}">
+            Supprimer le ticket
+        </a>
+    </p>
+
     <p>
         <a href="{% url 'contributions' %}">
             Retour à mes contributions
