Ajout de l'aperçu de la date et de l'heure de publication dans la page contributions

--- a/LITReview/main/templates/main/contributions.html
+++ b/LITReview/main/templates/main/contributions.html
@@ -13,6 +13,9 @@
             Intitulé
         </th>
         <th>
+            Date et heure de publication
+        </th>
+        <th>
             Actions
         </th>
     </tr>
