--- a/LITReview/main/templates/main/snippets/review.html
+++ b/LITReview/main/templates/main/snippets/review.html
@@ -6,6 +6,9 @@
         {{ post.headline }} ({{ post.ticket }})
     </a>
 </td>
+<TD>
+    Le {{ post.time_created|date:"d/m/Y à h:m" }}
+</TD>
 <td>
     <a href="{% url 'edit-review' post.id %}">
         Modifier
