Ajout de l'aperçu de la date et de l'heure de création dans les vues détaillées des tickets et des critiques

--- a/LITReview/main/templates/main/details-review.html
+++ b/LITReview/main/templates/main/details-review.html
@@ -7,6 +7,9 @@
 
 <ul>
     <li>
+        Publiée le {{ review.time_created|date:"d/m/Y à h:m" }}
+    </li>
+    <li>
         En réponse au ticket {{ review.ticket.id }} : {{ review.ticket.title }}
     </li>
 
