--- a/LITReview/main/templates/main/details-ticket.html
+++ b/LITReview/main/templates/main/details-ticket.html
@@ -6,6 +6,14 @@
 </h2>
 
 <p>
+    Publié le {{ ticket.time_created|date:"d/m/Y à h:m" }}
+</p>
+
+<h3>
+    Description
+</h3>
+
+<p>
     {{ ticket.description }}
 </p>
 
