Ajout de la fonction de suppression des tickets et des critiques à partir de la vue contribusions

--- a/LITReview/main/templates/main/snippets/review.html
+++ b/LITReview/main/templates/main/snippets/review.html
@@ -13,4 +13,7 @@
     <a href="{% url 'edit-review' post.id %}">
         Modifier
     </a>
+    <a href="{% url 'delete-review' post.id %}">
+        Supprimer
+    </a>
 </td>
