--- a/LITReview/main/templates/main/snippets/ticket.html
+++ b/LITReview/main/templates/main/snippets/ticket.html
@@ -13,4 +13,7 @@
     <a href="{% url 'edit-ticket' post.id %}">
         Modifier
     </a>
+    <a href="{% url 'delete-ticket' post.id %}">
+        Supprimer
+    </a>
 </td>
