Ajout de la fonction de suppression de ticket et de critique à partir des vues d'édtion et détaillées

--- a/LITReview/main/templates/main/edit-review.html
+++ b/LITReview/main/templates/main/edit-review.html
@@ -12,7 +12,7 @@
     </form>
 
     <p>
-        <a href="{% url 'contributions' %}">
+        <a href="{% url 'delete-review' review.id %}">
             Supprimer la critique
         </a>
     </p>
