--- a/LITReview/main/templates/main/edit-ticket.html
+++ b/LITReview/main/templates/main/edit-ticket.html
@@ -12,7 +12,7 @@
     </form>
 
     <p>
-        <a href="{% url 'contributions' %}">
+        <a href="{% url 'delete-ticket' ticket.id %}">
             Supprimer le ticket
         </a>
     </p>
