--- a/LITReview/main/templates/main/base.html
+++ b/LITReview/main/templates/main/base.html
@@ -1,47 +1,58 @@
 {% load static %}
 <html>
-    <head>
-        <title>
-            LitReview
-        </title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="{% static 'main/styles/styles.css' %}">
-    </head>    
 
-    <body>
-        <a href="{% url 'home' %}">
-            <h1>
-                Lit Review
-            </h1>
-        </a>
+<head>
+    <title>
+        LitReview
+    </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'main/styles/styles.css' %}">
+</head>
 
-        <nav>
-            <ul>
-                <li>
-                    <a href="{% url 'subscribs' %}">
-                        Mes Abonnements
-                    </a>
-                </li>
-                <li>
-                    <a href="{% url 'contributions' %}">
-                        Mes Contributions
-                    </a>
-                </li>
-                <li>
-                    <a href="{% url 'home' %}">
-                        Déconnexion
-                    </a>
-                </li>
+<body>
+    <a href="{% url 'home' %}">
+        <h1>
+            Lit Review
+        </h1>
+    </a>
+
+    {% if user.is_authenticated %}
+    <nav>
+        <ul>
+            <li>
+                <a href="{% url 'subscribs' %}">
+                    Mes Abonnements
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'contributions' %}">
+                    Mes Contributions
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'signout' %}">
+                    Déconnexion
+                </a>
+            </li>
         </ul>
-        </nav>
+    </nav>
+    {% endif %}
 
-        <div>
-            {% block content %}
-            {% endblock %}
-        </div>
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
 
-        <footer>
+    <footer>
+        <p>
             MVP du projet Lit Review
-        </footer>
-    </body>
+        </p>
+        {% if user.is_authenticated %}
+        <p>
+            Connecté en tant que {{ user.username}}
+        </p>
+        {% endif %}
+    </footer>
+</body>
+
 </html>
