--- a/LITReview/authentication/templates/authentication/signup.html
+++ b/LITReview/authentication/templates/authentication/signup.html
@@ -7,20 +7,7 @@
 
     <form method="post">
         {% csrf_token %}
-        <p>
-            <label for="username">Nom d'utilisateur</label>
-            <input type="text" id=username" name="username"/>
-        </p>
-        <p>
-            <label for="password">Mot de passe</label>
-            <input type="password" id="password" name="password"/>
-        </p>
-        <p>
-            <label for="password-confirmation">Confirmation du Mot de passe</label>
-            <input type="password" id="password-confirmation" name="password-confirmation"/>
-        </p>
-        <p>
-            <input type="submit" value="Valider l'inscription"/>
-        </p>
+        {{ form.as_p }}
+        <input type="submit" value="Valider l'inscription"/>
     </form>
 {% endblock %}
