Mise en conformité avec la norme PEP8

--- a/LITReview/main/templates/main/details-review.html
+++ b/LITReview/main/templates/main/details-review.html
@@ -7,7 +7,7 @@
 
 <ul>
     <li>
-        Publiée le {{ review.time_created|date:"d/m/Y à h:m" }}
+        Publiée le {{ review.time_created|date:"d/m/Y à H:m" }}
     </li>
     <li>
         En réponse au ticket {{ review.ticket.id }} : {{ review.ticket.title }}
