--- a/LITReview/main/templates/main/details-ticket.html
+++ b/LITReview/main/templates/main/details-ticket.html
@@ -6,7 +6,7 @@
 </h2>
 
 <p>
-    Publié le {{ ticket.time_created|date:"d/m/Y à h:m" }}
+    Publié le {{ ticket.time_created|date:"d/m/Y à H:m" }}
 </p>
 
 <h3>
