--- a/LITReview/authentication/templates/authentication/signup.html
+++ b/LITReview/authentication/templates/authentication/signup.html
@@ -8,6 +8,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Valider l'inscription"/>
+        <input type="submit" value="Valider"/>
     </form>
 {% endblock %}
