--- a/LITReview/main/templates/main/snippets/review.html
+++ b/LITReview/main/templates/main/snippets/review.html
@@ -7,7 +7,7 @@
     </a>
 </td>
 <TD>
-    Le {{ post.time_created|date:"d/m/Y à h:m" }}
+    Le {{ post.time_created|date:"d/m/Y à H:m" }}
 </TD>
 <td>
     <a href="{% url 'edit-review' post.id %}">
