--- a/LITReview/main/templates/main/subscribs.html
+++ b/LITReview/main/templates/main/subscribs.html
@@ -6,6 +6,16 @@
     </h2>
 
     <h3>
+        Suivre un utilisateur
+    </h3>
+
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Valider le suivi"/>
+    </form>
+
+    <h3>
         Personnes que je suis
     </h3>
 
