Ajout de la vue new_ticket_and_review

--- a/LITReview/main/templates/main/home.html
+++ b/LITReview/main/templates/main/home.html
@@ -12,6 +12,13 @@
 </p>
 
 <p>
+    <a href="{% url 'new-ticket-and-review' %}">
+        Créer une critique
+    </a>
+</p>
+
+
+<p>
     Ici, mon flux constitué de mes tickets, et de mes critiques
 </p>
 {% endblock %}
