Modification des vues subscribs et contributions pour qu'elle s'adapte soit à l'utilisateur connecté, soit à un utilisateur tiers

--- a/LITReview/main/templates/main/base.html
+++ b/LITReview/main/templates/main/base.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url 'contributions' %}">
+                <a href="{% url 'contributions' user.id %}">
                     Mes Contributions
                 </a>
             </li>
