--- a/LITReview/main/templates/main/delete-review.html
+++ b/LITReview/main/templates/main/delete-review.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-    <a href="{% url 'contributions' %}">
+    <a href="{% url 'contributions' review.user.id %}">
         Non
     </a>
 </p>
