--- a/LITReview/main/templates/main/edit-review.html
+++ b/LITReview/main/templates/main/edit-review.html
@@ -18,7 +18,7 @@
     </p>
 
     <p>
-        <a href="{% url 'contributions' %}">
+        <a href="{% url 'contributions' user.id %}">
             Retour à mes contributions
         </a>
     </p>
