--- a/LITReview/main/templates/main/snippets/ticket.html
+++ b/LITReview/main/templates/main/snippets/ticket.html
@@ -9,6 +9,7 @@
 <TD>
     Le {{ post.time_created|date:"d/m/Y à H:m" }}
 </TD>
+{% if user == post_user %}
 <td>
     <a href="{% url 'edit-ticket' post.id %}">
         Modifier
@@ -17,3 +18,4 @@
         Supprimer
     </a>
 </td>
+{% endif %}
