--- a/LITReview/main/templates/main/details-ticket.html
+++ b/LITReview/main/templates/main/details-ticket.html
@@ -52,7 +52,7 @@
 </p>
 
 <p>
-    <a href="{% url 'contributions' %}">
+    <a href="{% url 'contributions' ticket.user.id %}">
         Retour à mes contributions
     </a>
 </p>
