--- a/LITReview/main/templates/main/edit-review.html
+++ b/LITReview/main/templates/main/edit-review.html
@@ -19,7 +19,7 @@
 
     <p>
         <a href="{% url 'contributions' user.id %}">
-            Retour à mes contributions
+            Mes contributions
         </a>
     </p>
 {% endblock %}
